fix text color in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 
 .dark-mode {
   background-color: $gray-900;
+  color: $white;
 }
 
 .show-print {
